# OSDMenu

cmake/: functions.cmake
mbr/: CMakeLists.txt
patcher/: CMakeLists.txt
utils/installer/: CMakeLists.txt
utils/scripts/: kelfsign.py
